Fixed navbar and footer overlapping issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,7 @@
 body{
   background-color:#f8f8f8;
   height: 100%;
+  padding-bottom: 72px;
 }
 
 .footer-bg-color{
@@ -76,6 +77,16 @@ nav{
   transition-duration: 0.4s;
 }
 
+.btn-danger-custom {
+  transition-duration: 0.4s;
+}
+
+.btn-danger-custom:hover {
+  background-color:#b9002b;
+  color:white;
+  transition-duration: 0.4s;
+}
+
 .action-image{
   height: 28px;
   width: 28px;
@@ -91,4 +102,8 @@ nav{
     text-indent:30px;
     display:block;
     cursor: pointer;
+}
+
+.home-container-custom-margin{
+  margin-top: 16%;
 }
